--- a/teamcassava_Project-final.ipynb
+++ b/teamcassava_Project-final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "[2 rows x 22 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "[8126 rows x 1 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1753,7 @@
        "Text(0.5, 1.0, 'Top 10 High Profit Movies')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2009,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2434,7 +2434,7 @@
        "[8126 rows x 27 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2447,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
        "max           3.584629e+10"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2658,7 +2658,7 @@
        "[3103 rows x 2 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2673,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2746,7 +2746,7 @@
        "Columbia Pictures             1.585777e+10         2.683391e+10"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2759,7 +2759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2768,7 +2768,7 @@
        "Text(0.5, 1.0, 'Top 20 High Profit Studios')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2796,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
        "Maestranza Films                          152500000.0         -152222404.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2882,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2891,7 +2891,7 @@
        "Text(0.5, 1.0, 'Top 20 Studios with most Losses')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2918,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3144,7 +3144,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3158,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -3570,7 +3570,7 @@
        "[8126 rows x 27 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3586,7 +3586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3599,7 +3599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3610,7 +3610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3829,7 +3829,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3840,7 +3840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -4066,7 +4066,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4080,7 +4080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -4092,11 +4092,11 @@
       "\n",
       "No genre or movie selected\n",
       "SUGGESTED MOVIE: \n",
-      "28453    The Shawshank Redemption\n",
-      "32487                  Fight Club\n",
-      "73865           Avengers: Endgame\n",
-      "57234       The Dark Knight Rises\n",
-      "82239                       Joker\n",
+      "69334                   Batman v Superman: Dawn of Justice\n",
+      "31279    The Lord of the Rings: The Fellowship of the Ring\n",
+      "67523           Star Wars: Episode VII - The Force Awakens\n",
+      "67676              Star Wars: Episode VIII - The Last Jedi\n",
+      "82239                                                Joker\n",
       "Name: original_title, dtype: object\n",
       "\n",
       "DO YOU LIKE THE SUGGESTED MOVIE? y/n:  y\n",
@@ -4213,7 +4213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -4606,7 +4606,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4620,7 +4620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -4629,7 +4629,7 @@
        "Text(0.5, 1.0, 'Top 10 Movies')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4658,7 +4658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -5063,7 +5063,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5077,7 +5077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -5086,7 +5086,7 @@
        "Text(0.5, 1.0, 'Least Rated 10 Movies')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5115,7 +5115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
